--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,6 +6,7 @@
     "codespaces": {
       "openFiles": [
         "README.md",
+        "All_data.csv",
         "Dashboard/Bike_Sharing_Dashboard.py"
       ]
     },
